feat: create the tasks containers with basic styles

--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -1,5 +1,5 @@
 .body {
-  background: #1c2e36;
+  background: var(--blue);
   width: 100vw;
   min-height: 100vh;
 }
@@ -8,7 +8,7 @@
   width: 100%;
   height: 120px;
   padding: 16 8;
-  color: #fffff6;
+  color: var(--white);
   font-family: Courier Prime;
   font-weight: 400;
   font-size: 80px;
@@ -18,4 +18,6 @@
 }
 
 .main {
+  display: flex;
+  justify-content: center;
 }
