--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -6,12 +6,12 @@
 
 .header {
   width: 100%;
-  height: 120px;
-  padding: 16 8;
+  padding-top: 2vh;
+  height: 7rem;
   color: var(--white);
   font-family: Courier Prime;
   font-weight: 400;
-  font-size: 80px;
+  font-size: 6rem;
   line-height: 100%;
   letter-spacing: 0%;
   text-align: center;
