--- a/src/app/App.module.css
+++ b/src/app/App.module.css
@@ -1,15 +1,15 @@
 .body {
-  background: var(--blue);
-  width: 100vw;
+  background: var(--blueBackground);
+  min-width: 100vw;
   min-height: 100vh;
 }
 
 .header {
   width: 100%;
-  padding-top: 2vh;
+  padding-top: 1rem;
   height: 7rem;
-  color: var(--white);
-  font-family: Courier Prime;
+  color: var(--containersWhiteBackground);
+  font-family: "Courier New", Courier, monospace;
   font-weight: 400;
   font-size: 6rem;
   line-height: 100%;
