fix: correct icon-button className

--- a/src/components/icon-button/icon-button.module.css
+++ b/src/components/icon-button/icon-button.module.css
@@ -1,5 +1,5 @@
 .button {
-  background-color: inherit;
+  background-color: transparent;
   border: none;
   transition: 100ms;
   cursor: pointer;
