feat: add scroll to task-list

--- a/src/components/task-list/task-list.module.css
+++ b/src/components/task-list/task-list.module.css
@@ -21,6 +21,12 @@
   border-radius: 0.8rem;
 }
 
+.taskContainer {
+  width: 40rem;
+  height: 80%;
+  overflow-y: auto;
+}
+
 .icon {
   position: absolute;
   bottom: 2%;
