--- a/src/components/task/task.module.css
+++ b/src/components/task/task.module.css
@@ -26,16 +26,19 @@
 
 .titleContainer {
   min-width: 60%;
-  height: 25%;
+  max-width: 70%;
+  height: 15%;
   display: flex;
   justify-content: start;
+  text-wrap-mode: wrap;
 }
 
 .descriptionContainer {
   width: 60%;
-  height: 15%;
+  height: 30%;
   display: flex;
   justify-content: start;
+  overflow-y: auto;
 }
 
 .dueTimeContainer {
@@ -48,7 +51,7 @@
 .title {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 100%;
   letter-spacing: 0%;
   vertical-align: middle;
@@ -83,6 +86,12 @@
 .icon {
   width: 2.5rem;
   height: 2.5rem;
+}
+
+.editIcon {
+  margin-left: 2.5%;
+  width: 2rem;
+  height: 2rem;
 }
 
 .actions {
