--- a/src/modals/task-modal/task-modal.module.css
+++ b/src/modals/task-modal/task-modal.module.css
@@ -30,6 +30,7 @@
 
 .header {
   margin-left: 1rem;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .label {
@@ -47,13 +48,18 @@
   height: 2rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-
+  padding-left: 2%;
   border: 1px solid var(--modalInputBorder);
   border-radius: 0.5rem;
+  text-align: left;
+  direction: ltr;
 }
 
 .textarea {
   height: 5rem;
+  resize: none;
+  padding-left: 2%;
+  padding-top: 2%;
 }
 
 .submitButton {
@@ -63,4 +69,21 @@
   background: var(--submitButtonBG);
   border: 1px solid var(--submitButtonBorder);
   border-radius: 0.5rem;
+
+  cursor: pointer;
+
+  transition: 100ms;
+}
+
+.submitButton:hover {
+  transform: scale(1.2);
+  transition: 100ms;
+}
+
+.closeIcon {
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  top: 2%;
+  right: 2%;
 }
